# polkadot-teste

./: Cargo.toml  README.md
node/: Cargo.toml
pallets/template/: Cargo.toml
pallets/template/src/: impls.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
