[package]
name = "pallet-template"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
authors = ["Seu Nome <seuemail@example.com>"]
edition = "2018"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], version = "2.0.0" }
scale-info = { version = "2.11.6", features = ["derive"] }
frame-support = { version = "4.0.0", default-features = false }
frame-system = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }

# Dependências para benchmarking
frame-benchmarking = { optional = true, version = "4.0.0" }


# Dependências para serialização e codificação
codec = { features = ["derive"], version = "2.0.0" }
scale-info = { features = ["derive"], version = "0.8.0" }

# Dependência opcional de benchmarking
frame-benchmarking = { optional = true, version = "4.0.0" }

[dev-dependencies]
# Dependências de desenvolvimento
sp-core = { default-features = true, version = "4.0.0" }
sp-io = { default-features = true, version = "4.0.0" }

[features]
# Features padrão e outras
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std"
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime"
]
