[package]
name = "pallet-template"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.11.6", features = ["derive"] }
frame-support = { version = "4.0.0", default-features = false }
frame-system = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
sp-std = { version = "4.0.0", default-features = false }
schnorrkel = "0.11.4"

# Dependências para benchmarking
frame-benchmarking = { optional = true, version = "4.0.0" }

[dev-dependencies]
sp-core = { version = "34.0.0", default-features = false }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std"
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime"
]
